add some redirects

--- a/a/air-photos/index.html
+++ b/a/air-photos/index.html
@@ -61,7 +61,7 @@
 				<li><a href="/k/kramer-josef/index.html">Josef Kramer</a></li>
 				<li><a href="/l/lengyel-olga/index.html">Olga Lengyel</a></li>
 				<li><a href="/l/lequeux-maurice/index.html">Maurice Lequeux</a></li>
-				<li><a href="/l/levy-robert/index.html">Robert Lévy</a></li>
+				<li><a href="/l/levy-robert/index.html">Robert L&eacute;vy</a></li>
 				<li><a href="/l/lewental-salmen/index.html">Salmen Lewental</a></li>
 				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewi&#324;ska</a></li>
 				<li><a href="/m/mandelbaum-henryk/index.html">Henryk Mandelbaum</a></li>
