--- a/c/cremation-propaganda/index.html
+++ b/c/cremation-propaganda/index.html
@@ -339,7 +339,7 @@
 												</td>
 					</tr>
 					<tr>
-						<td><a href="/l/lettich-andre/index.html">André Lettich</a></td>
+						<td><a href="/l/lettich-andre/index.html">Andr&eacute; Lettich</a></td>
 						<td>
 
 							6
