--- a/cross-references/absurdities.html
+++ b/cross-references/absurdities.html
@@ -23,7 +23,7 @@
 				<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
 				<li><a href="/b/bergen-belsen/index.html">Bergen-Belsen</a></li>
 				<li><a href="/b/buchenwald/index.html">Buchenwald</a></li>
-				<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
+				<li><a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a></li>
 				<li><a href="/e/escapes-from-gas-chamber/index.html">Escapes, from Gas Chamber</a></li>
 				<li><a href="/e/exaggerated-death-tolls/index.html">Exaggerated Death Tolls</a></li>
 				<li><a href="/e/exotic-murder-weapons/index.html">Exotic Murder Weapons</a></li>
