--- a/d/index.html
+++ b/d/index.html
@@ -31,18 +31,22 @@
 						<li><a href="/d/dawidowski-roman/index.html">Dawidowski, Roman</a></li>
 						<li><a href="/d/ddt/index.html">DDT</a></li>
 						<li><a href="/e/evacuations-from-german-camps/index.html">death marches</a></li>
+						<li><a href="/e/exaggerated-death-tolls/index.html">death tolls</a></li>
+						<li><a href="/w/wael-monique-de/index.html">Defonseca, Misha</a></li>
 						<li><a href="/d/degesch/index.html">DEGESCH</a></li>
 						<li><a href="/d/dejaco-walter/index.html">Dejaco, Walter</a></li>
 						<li><a href="/d/demjanjuk-john/index.html">Demjanjuk, John</a></li>
 						<li><a href="/d/demography-jewish/index.html">Demography, Jewish</a></li>
 						<li><a href="/d/denisow-piotr/index.html">Denisow, Piotr</a></li>
 						<li><a href="/d/denmark/index.html">Denmark</a></li>
+						<li><a href="/r/resettlement/index.html">deportation</a></li>
 						<li><a href="/d/dibowski-wilhelm/index.html">Dibowski, Wilhelm</a></li>
 						<li><a href="/d/diesel-exhaust/index.html">Diesel Exhaust</a></li>
 						<li><a href="/f/fumigation-gas-chamber/index.html">disinfestation chamber</a></li>
 						<li><a href="/d/dlugoborski-waclaw/index.html">D&#322;ugoborski, W&aacute;c&#322;aw</a></li>
 						<li><a href="/d/doessekker-bruno/index.html">Doessekker, Bruno</a></li>
 						<li><a href="/d/doliner-iosif/index.html">Doliner, Iosif</a></li>
+						<li><a href="/g/gastight-doors/index.html">doors, gastight</a></li>
 						<li><a href="/d/dragon-abraham/index.html">Dragon, Abraham</a></li>
 						<li><a href="/d/dragon-szlama/index.html">Dragon, Szlama</a></li>
 						<li><a href="/d/dugin-itzhak/index.html">Dugin, Itzhak</a></li>
