--- a/e/einsatzgruppen/index.html
+++ b/e/einsatzgruppen/index.html
@@ -252,21 +252,21 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th><span lang="de-DE">Unit</span></th>
+						<th><span lang="de-DE">Unit</th>
 						<th> Death Toll </th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td><i><span lang="de-DE">Einsatzgruppe</span></i><span lang="de-DE"> A:</span></td>
+						<td><i><span lang="de-DE">Einsatzgruppe</i><span lang="de-DE"> A:</td>
 						<td> 240,410 </td>
 					</tr>
 					<tr>
-						<td><i><span lang="de-DE">Einsatzgruppe</span></i><span lang="de-DE"> B:</span></td>
+						<td><i><span lang="de-DE">Einsatzgruppe</i><span lang="de-DE"> B:</td>
 						<td> 142,359 </td>
 					</tr>
 					<tr>
-						<td><i><span lang="de-DE">Einsatzgruppe</span></i><span lang="de-DE"> C:</span></td>
+						<td><i><span lang="de-DE">Einsatzgruppe</i><span lang="de-DE"> C:</td>
 						<td> 134,260 </td>
 					</tr>
 					<tr>
@@ -1143,7 +1143,7 @@
 							<li>HSSPF: <i>H&ouml;herer SS- und Polizei-F&uuml;hrer</i>/Higher SS and Police Leader</li>
 							<li>z.b.V: <i>zur besonderen Verf&uuml;gung</i>/for special use</li>
 							<li>OrPo: <i>Ordnungs Polizei</i>/regular police</li>
-							<li>BdS GG: <span lang="de-DE"><i>Befehlshaber der Sicherheitspolizei Generalgouvernement</i>/</span> commander of the Security Police, occupied Poland</li>
+							<li>BdS GG: <span lang="de-DE"><i>Befehlshaber der Sicherheitspolizei Generalgouvernement</i>/ commander of the Security Police, occupied Poland</li>
 							<li>Stapo: <i>Staatspolizei</i>/state police</li>
 						</ul>
 						</th>
@@ -1452,7 +1452,7 @@
 					</tr>
 					<tr>
 						<td> 2,200,000 </td>
-						<td> <span lang="de-DE">H. Krausnick, H.H. Wilhelm (</span><span lang="de-DE">1981, p. 621)</span> </td>
+						<td> <span lang="de-DE">H. Krausnick, H.H. Wilhelm (<span lang="de-DE">1981, p. 621) </td>
 					</tr>
 					<tr>
 						<td> 2,100,000 </td>
