--- a/f/fat-extracted-from-burning-corpses/index.html
+++ b/f/fat-extracted-from-burning-corpses/index.html
@@ -31,7 +31,7 @@
 				<li><a href="/c/cohen-leon/index.html">Leon Cohen</a></li>
 				<li><a href="/d/dragon-szlama/index.html">Szlama Dragon</a></li>
 				<li><a href="/e/eisenschmidt-eliezer/index.html">Eliezer Eisenschmidt</a></li>
-				<li>four distinguished university professors: <a href="/e/epstein-berthold/index.html">Berthold Epstein</a>, Prague; <a href="/f/fischer-bruno/index.html">Bruno Fischer</a>, Prague; <a href="/l/limousin-henri/index.html">Henri Limousin</a>, Clermont-Ferrand; and <a href="/m/mansfeld-geza/index.html">Géza Mansfeld</a>, Budapest</li>
+				<li>four distinguished university professors: <a href="/e/epstein-berthold/index.html">Berthold Epstein</a>, Prague; <a href="/f/fischer-bruno/index.html">Bruno Fischer</a>, Prague; <a href="/l/limousin-henri/index.html">Henri Limousin</a>, Clermont-Ferrand; and <a href="/m/mansfeld-geza/index.html">G&eacute;za Mansfeld</a>, Budapest</li>
 				<li><a href="/f/faitelson-alex/index.html">Alex Faitelson</a></li>
 				<li><a href="/h/hoss-rudolf/index.html">Rudolf H&ouml;ss</a></li>
 				<li><a href="/j/jankowski-stanislaw/index.html">Stanis&#322;aw Jankowski</a></li>
