--- a/f/flames-out-of-crematory-chimneys/index.html
+++ b/f/flames-out-of-crematory-chimneys/index.html
@@ -69,7 +69,7 @@
 				<li>Margarete Buber-Neumann</li>
 				<li>Henry Bulawko</li>
 				<li>Gilbert Debrise</li>
-				<li>Fania Fénelon</li>
+				<li>Fania F&eacute;nelon</li>
 				<li>Nelly Gorce</li>
 				<li>Nadine Heftler</li>
 				<li>Denise Holstein</li>
@@ -78,7 +78,7 @@
 				<li>C. Kalb</li>
 				<li>Sylvain Kaufmann</li>
 				<li><a href="/l/levi-primo/index.html">Primo Levi</a></li>
-				<li>Renée Louria</li>
+				<li>Ren&eacute;e Louria</li>
 				<li>Françoise Maous</li>
 				<li>Edmond Michelet</li>
 				<li>Liana Millu</li>
@@ -87,7 +87,7 @@
 				<li>Paul Steinberg</li>
 				<li>Georges Straka</li>
 				<li>Germaine Tillion</li>
-				<li>Béatrice de Toulouse-Lautrec</li>
+				<li>B&eacute;atrice de Toulouse-Lautrec</li>
 			</ul>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
