--- a/introduction/index.html
+++ b/introduction/index.html
@@ -265,7 +265,7 @@
 				<li>And last but not least an entry listing <a href="/f/false-witnesses/index.html">false witnesses</a>, meaning persons who were caught having invented their entire wartime experiences.</li>
 			</ul>
 			<p>
-				Another illuminating entry in this encyclopedia is titled <a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a>. It lists and briefly discusses widespread notions about this event held not by witnesses, but by the general public. Many of them are distorted or false, and there is inevitably some overlap with the previously listed entries on common false assertions by witnesses. Some are unique, however, and deserve special attention, such as:
+				Another illuminating entry in this encyclopedia is titled <a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a>. It lists and briefly discusses widespread notions about this event held not by witnesses, but by the general public. Many of them are distorted or false, and there is inevitably some overlap with the previously listed entries on common false assertions by witnesses. Some are unique, however, and deserve special attention, such as:
 			</p>
 			<ul>
 				<li>assembly-line-style, high-tech mass murder</li>
