--- a/k/kranz-hermine/index.html
+++ b/k/kranz-hermine/index.html
@@ -34,7 +34,7 @@
 				<li>In the gas-chamber floor there were trap doors which opened after the gassing. Under these were trucks, into which the bodies fell. They were then driven to the furnace. This is a wild fantasy conclusively proving that Kranz made it all up.</li>
 			</ul>
 			<p>
-				Repeating the clichés, she moreover stated: <q>Dr. <a href="/m/mengele-josef/index.html">Mengele</a> was always present.</q>
+				Repeating the clich&eacute;s, she moreover stated: <q>Dr. <a href="/m/mengele-josef/index.html">Mengele</a> was always present.</q>
 			</p>
 			<p>
 				(For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 361f.)
