--- a/l/index.html
+++ b/l/index.html
@@ -33,9 +33,9 @@
 						<li><a href="/l/lerner-leon/index.html">Lerner, Leon</a></li>
 						<li><a href="/l/lesky-simcha/index.html">Lesky, Simcha</a></li>
 						<li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li>
-						<li><a href="/l/lettich-andre/index.html">Lettich, André</a></li>
+						<li><a href="/l/lettich-andre/index.html">Lettich, Andr&eacute;</a></li>
 						<li><a href="/l/levi-primo/index.html">Levi, Primo</a></li>
-						<li><a href="/l/levy-robert/index.html">Lévy, Robert</a></li>
+						<li><a href="/l/levy-robert/index.html">L&eacute;vy, Robert</a></li>
 						<li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li>
 						<li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li>
 						<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
