--- a/l/lengyel-olga/index.html
+++ b/l/lengyel-olga/index.html
@@ -49,7 +49,7 @@
 				With regard to the number of victims, Lengyel&rsquo;s figures are identical to those mentioned in a report allegedly written by an unnamed Jew deported from France (possibly <a href="/lequeux-maurice/index.html">Maurice Lequeux</a>, who was with her in Lublin in early 1945), so either Lengyel copied it from there, or vice versa: the French Jew copied her figures. Either way, the numbers mentioned are obviously mendacious: 1,314,000 Jews were presumably murdered just during the period from May 1944 to late July 1944, more than the orthodoxy currently claims for the entire existence of the camp.
 			</p>
 			<p>
-				In her book, Lengyel was simply incorporating the usual clichés, rumors and atrocity lies that filled survivor chatter, show-trial frenzies and sensationalistic media reports of the time, spicing it up with her own inventions, exaggerations and lies.
+				In her book, Lengyel was simply incorporating the usual clich&eacute;s, rumors and atrocity lies that filled survivor chatter, show-trial frenzies and sensationalistic media reports of the time, spicing it up with her own inventions, exaggerations and lies.
 			</p>
 			<p>
 				(For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 385-387; <a href="/bibliography/index.html#Langer">Langer 2021</a>, pp. 169-195.)
