--- a/l/lichtenstein-mordecai/index.html
+++ b/l/lichtenstein-mordecai/index.html
@@ -32,7 +32,7 @@
 				<li>This witness&rsquo;s <q>very careful estimate</q> of the Auschwitz death toll amounts to 3 million Jews plus one million non-Jews, which happens to coincide with the Soviet propaganda lie of four million Auschwitz victims, a convergence of lies.</li>
 			</ul>
 			<p>
-				From this hodgepodge of untrue statements, it is clear that the witness had no first-hand knowledge about any of it, but relied on false rumors and clichés. And yet, the Jewish Central Information Service in London, which collected this statement, stated this about the report:
+				From this hodgepodge of untrue statements, it is clear that the witness had no first-hand knowledge about any of it, but relied on false rumors and clich&eacute;s. And yet, the Jewish Central Information Service in London, which collected this statement, stated this about the report:
 			</p>
 			<blockquote>
 				<p>
