--- a/m/index.html
+++ b/m/index.html
@@ -28,7 +28,7 @@
 						<li><a href="/m/majdanek-trials/index.html">Majdanek Trials</a></li>
 						<li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li>
 						<li><a href="/m/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
-						<li><a href="/m/mansfeld-geza/index.html">Mansfeld, Géza</a></li>
+						<li><a href="/m/mansfeld-geza/index.html">Mansfeld, G&eacute;za</a></li>
 						<li><a href="/m/manusevich-david/index.html">Manusevich, David</a></li>
 						<li><a href="/m/marco-enric/index.html">Marco, Enric</a></li>
 						<li><a href="/m/marcus-kurt/index.html">Marcus, Kurt</a></li>
