--- a/m/mandelbaum-henryk/index.html
+++ b/m/mandelbaum-henryk/index.html
@@ -53,7 +53,7 @@
 				<li>In 1942 alone, when Mandelbaum wasn&rsquo;t even at Auschwitz, he insisted that 25 railway cars full of victims&rsquo; spectacles were hauled out of Auschwitz.</li>
 			</ul>
 			<p>
-				The last statement is typical for this witness, who had very little first-hand knowledge of anything, yet still regurgitated whatever rumor, cliché and black propaganda he had heard, made it his own, and wrapped it in a story that changed with every testimony he gave. (For details, see <a href="/bibliography/index.html#Mattogno2021d">Mattogno 2021d</a>, pp. 179-216.)
+				The last statement is typical for this witness, who had very little first-hand knowledge of anything, yet still regurgitated whatever rumor, clich&eacute; and black propaganda he had heard, made it his own, and wrapped it in a story that changed with every testimony he gave. (For details, see <a href="/bibliography/index.html#Mattogno2021d">Mattogno 2021d</a>, pp. 179-216.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
