--- a/p/pilecki-witold/index.html
+++ b/p/pilecki-witold/index.html
@@ -37,7 +37,7 @@
 				<li>He claimed that, when <a href="/m/mass-graves/index.html">mass graves</a> had to be exhumed due to the risk of polluting the drinking water (which is correct), cranes were used for that purpose, which is an unprecedented and imaginary idea.</li>
 			</ul>
 			<p>
-				Pilecki claimed to have let himself get caught on purpose, so he would get inside the camp in order to collect information and transmit it to his outside contacts. Yet instead of conveying any accurate information, he merely repeated wild guesses and exaggerations, propaganda clichés and outright nonsense. He evidently knew
+				Pilecki claimed to have let himself get caught on purpose, so he would get inside the camp in order to collect information and transmit it to his outside contacts. Yet instead of conveying any accurate information, he merely repeated wild guesses and exaggerations, propaganda clich&eacute;s and outright nonsense. He evidently knew
 			</p>
 			<ul>
 				<li>nothing of the alleged gassings in the <a href="/c/crematoria/index.html#Auschwitz_Main">Main Camp&rsquo;s crematorium</a>;</li>
