--- a/p/propaganda/index.html
+++ b/p/propaganda/index.html
@@ -87,7 +87,7 @@
 			</p>
 			<blockquote>
 				<p>
-					He was always the first to announce disastrous events or difficult situations, without hiding anything. The result was a general belief, between 1939 and 1942, that German communiqués not only were more concise, clearer, and less cluttered, but were more truthful than Allied communiqués &mdash; and furthermore, that the Germans published all the news two or three days before the Allies. All this is so true that pinning the title of Big Liar on Goebbels must be considered quite a propaganda success.
+					He was always the first to announce disastrous events or difficult situations, without hiding anything. The result was a general belief, between 1939 and 1942, that German communiqu&eacute;s not only were more concise, clearer, and less cluttered, but were more truthful than Allied communiqu&eacute;s &mdash; and furthermore, that the Germans published all the news two or three days before the Allies. All this is so true that pinning the title of Big Liar on Goebbels must be considered quite a propaganda success.
 				</p>
 			</blockquote>
 			<p>
@@ -439,7 +439,7 @@
 				<li>Richard Breitman</li>
 				<li>Robert van Pelt</li>
 				<li>Lucy Dawidowicz</li>
-				<li>Léon Poliakov</li>
+				<li>L&eacute;on Poliakov</li>
 				<li>Alexander Donat</li>
 				<li>Gerald Reitlinger</li>
 				<li>Gerald Fleming</li>
