--- a/r/index.html
+++ b/r/index.html
@@ -40,7 +40,7 @@
 						<li><a href="/r/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
 						<li><a href="/r/resettlement/index.html">Resettlement</a></li>
 						<li><a href="/r/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
-						<li><a href="/r/rogerie-andre/index.html">Rogerie, André</a></li>
+						<li><a href="/r/rogerie-andre/index.html">Rogerie, Andr&eacute;</a></li>
 						<li><a href="/r/rogner-adolf/index.html">R&ouml;gner, Adolf</a></li>
 						<li><a href="/r/romania/index.html">Romania</a></li>
 						<li><a href="/r/rosenberg-alfred/index.html">Rosenberg, Alfred</a></li>
