--- a/r/ravensbruck/index.html
+++ b/r/ravensbruck/index.html
@@ -52,7 +52,7 @@
 				</p>
 			</blockquote>
 			<p>
-				All claims about <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a>, no matter how contradictory, senseless, and cliché-laden, are taken at face value and rubber-stamped as <q>true</q> by orthodox historians regarding their core content: that gas chamber(s) existed.
+				All claims about <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a>, no matter how contradictory, senseless, and clich&eacute;-laden, are taken at face value and rubber-stamped as <q>true</q> by orthodox historians regarding their core content: that gas chamber(s) existed.
 			</p>
 			<p>
 				In the case of gas-chamber claims at <a href="/f/flossenburg/index.html">Flossenb&uuml;rg</a>, <a href="/b/buchenwald/index.html">Buchenwald</a> and <a href="/b/bergen-belsen/index.html">Bergen-Belsen</a>, orthodox historians agree that those are wrong; that no <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a> existed there. Yet the only difference between those cases and Ravensbr&uuml;ck is that for Ravensbr&uuml;ck we have a slightly larger quantity of claims. But the sheer number of claims, whether small or large, does not mean that impossible things can happen.
