--- a/s/soap-from-jewish-corpses/index.html
+++ b/s/soap-from-jewish-corpses/index.html
@@ -57,7 +57,7 @@
 			</p>
 			<ul>
 				<li><a href="/a/auerbach-rachel/index.html">Rachel Auerbach</a></li>
-				<li>four distinguished university professors: <a href="/e/epstein-berthold/index.html">Berthold Epstein</a>, Prague; Bruno Fischer, Prague; Henri Limousin, Clermont-Ferrand; and Géza Mansfeld, Budapest</li>
+				<li>four distinguished university professors: <a href="/e/epstein-berthold/index.html">Berthold Epstein</a>, Prague; Bruno Fischer, Prague; Henri Limousin, Clermont-Ferrand; and G&eacute;za Mansfeld, Budapest</li>
 				<li><a href="/l/lengyel-olga/index.html">Olga Lengyel</a></li>
 				<li><a href="/m/morgen-konrad/index.html">Konrad Morgen</a></li>
 				<li><a href="/p/pechersky-alexander/index.html">Alexander Pechersky</a></li>
