--- a/s/sobibor/index.html
+++ b/s/sobibor/index.html
@@ -444,7 +444,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE"><a href="/e/engel-chaim/index.html">Chaim Engel</a> and <a href="/w/wijnberg-saartje/index.html">S. Engel-Wijnberg</a></span>
+							<span lang="de-DE"><a href="/e/engel-chaim/index.html">Chaim Engel</a> and <a href="/w/wijnberg-saartje/index.html">S. Engel-Wijnberg</a>
 												</td>
 					</tr>
 					<tr>
