--- a/s/sonderkommando/index.html
+++ b/s/sonderkommando/index.html
@@ -53,7 +53,7 @@
 			<ul>
 				<li><a href="/b/bendel-charles-s/index.html">Charles Bendel</a>: every few months.</li>
 				<li><a href="/b/bennahmias-daniel/index.html">Daniel Bennahmias</a>: 2-6 months.</li>
-				<li><a href="/l/lettich-andre/index.html">André Lettich</a>: every three or four months.</li>
+				<li><a href="/l/lettich-andre/index.html">Andr&eacute; Lettich</a>: every three or four months.</li>
 				<li><a href="/s/sackar-josef/index.html">Josef Sackar</a>: every six months.</li>
 				<li><a href="/s/sompolinski-roman/index.html">Roman Sompolinski</a>: about 6 months.</li>
 				<li><a href="/t/tauber-henryk/index.html">Henryk Tauber</a>: after a few months.</li>
@@ -91,7 +91,7 @@
 				<li>Aba/Abo</li>
 				<li>Alfred Aboav</li>
 				<li>Jan Agrestowski</li>
-				<li>André Balbin</li>
+				<li>Andr&eacute; Balbin</li>
 				<li>Fredy Bauer</li>
 				<li>Berko/Berl Becker</li>
 				<li><a href="/b/bendel-charles-s/index.html">Charles Bendel</a></li>
@@ -112,7 +112,7 @@
 				<li>Moshe Fry(ie)dman(n)</li>
 				<li><a href="/g/gabai-dario/index.html">Dario Gabai</a></li>
 				<li><a href="/g/gabai-yaakov/index.html">Yaakov Gabai</a></li>
-				<li><a href="/g/garbarz-moshe/index.html">Moshé Garbarz</a></li>
+				<li><a href="/g/garbarz-moshe/index.html">Mosh&eacute; Garbarz</a></li>
 				<li>Michel Gelbert</li>
 				<li><a href="/g/gertner-szaja/index.html">Szaja Gertner</a></li>
 				<li>Tew(v)el Gis(s)er</li>
@@ -135,7 +135,7 @@
 				<li>Aron Lej(i)bowicz</li>
 				<li>Szmul Lejbowicz</li>
 				<li>Lemko</li>
-				<li><a href="/l/lettich-andre/index.html">André Lettich</a></li>
+				<li><a href="/l/lettich-andre/index.html">Andr&eacute; Lettich</a></li>
 				<li>Moshe Levi</li>
 				<li>Henry Levy</li>
 				<li><a href="/l/lewental-salmen/index.html">Salmen Lewental</a></li>
