--- a/s/suss-franz/index.html
+++ b/s/suss-franz/index.html
@@ -47,7 +47,7 @@
 				</p>
 			</blockquote>
 			<p>
-				S&uuml;ss eventually contracted typhus himself, but rather than getting killed as a severely sick and dangerous witness unfit for work, he was nursed back to health, because he was evidently no carrier of any secrets. Once out of the hospital, he became a clerk in some office, and evidently lost touch with his former <i>Sonderkommando</i> colleagues, which he then declared summarily murdered without having any first-hand knowledge of it, evidently merely following the orthodox narrative. At that point of his deposition, S&uuml;ss switched from his own experiences to hearsay, even saying so expressly. What follows is filled with common black-propaganda clichés, such as:
+				S&uuml;ss eventually contracted typhus himself, but rather than getting killed as a severely sick and dangerous witness unfit for work, he was nursed back to health, because he was evidently no carrier of any secrets. Once out of the hospital, he became a clerk in some office, and evidently lost touch with his former <i>Sonderkommando</i> colleagues, which he then declared summarily murdered without having any first-hand knowledge of it, evidently merely following the orthodox narrative. At that point of his deposition, S&uuml;ss switched from his own experiences to hearsay, even saying so expressly. What follows is filled with common black-propaganda clich&eacute;s, such as:
 			</p>
 			<ul>
 				<li>He <q>heard</q> about a <a href="/h/himmler-visits/index.html">Himmler visit</a> to one of the new <a href="/c/crematoria/index.html#Auschwitz_Birkenau">crematoria</a>. However, there is no trace of such a visit, which even orthodox scholars reject as a mere rumor.</li>
