--- a/w/wannsee-protocol/index.html
+++ b/w/wannsee-protocol/index.html
@@ -307,11 +307,11 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">f&uuml;r das Verbleiben im Reich</span>
+							<span lang="de-DE">f&uuml;r das Verbleiben im Reich
 												</td>
 						<td>
 
-							<span lang="de-DE">f&uuml;r das Verbleiben im Reich</span>
+							<span lang="de-DE">f&uuml;r das Verbleiben im Reich
 												</td>
 						<td>
 
