--- a/w/witnesses/index.html
+++ b/w/witnesses/index.html
@@ -105,7 +105,7 @@
 				<li><a href="/g/gabai-dario/index.html">Gabai, Dario</a></li>
 				<li><a href="/g/gabai-yaakov/index.html">Gabai, Yaakov</a></li>
 				<li><a href="/g/gal-gyula/index.html">G&aacute;l, Gyula</a></li>
-				<li><a href="/g/garbarz-moshe/index.html">Garbarz, Moshé</a></li>
+				<li><a href="/g/garbarz-moshe/index.html">Garbarz, Mosh&eacute;</a></li>
 				<li><a href="/g/gertner-szaja/index.html">Gertner, Szaja</a></li>
 				<li><a href="/g/grabner-maximilian/index.html">Grabner, Maximilian</a> (SS)</li>
 				<li><a href="/g/gradowski-salmen/index.html">Gradowski, Salmen</a></li>
@@ -120,7 +120,7 @@
 				<li><a href="/k/karvat-david/index.html">Karvat, David</a></li>
 				<li><a href="/k/kaufmann-jeannette/index.html">Kaufmann, Jeannette</a></li>
 				<li><a href="https://nukebook.org/witness/victim/kaufmann-schafranov-sofia/603/">Kaufmann Schafranov, Sofia</a></li>
-				<li><a href="/k/kertesz-imre/index.html">Kertész, Imre</a></li>
+				<li><a href="/k/kertesz-imre/index.html">Kert&eacute;sz, Imre</a></li>
 				<li><a href="/k/klehr-josef/index.html">Klehr, Josef</a> (SS)</li>
 				<li><a href="/k/klein-marc/index.html">Klein, Marc</a></li>
 				<li><a href="/k/kranz-hermine/index.html">Kranz, Hermine</a></li>
@@ -134,16 +134,16 @@
 				<li><a href="/l/lea-david/index.html">Lea, David</a></li>
 				<li><a href="/l/lengyel-olga/index.html">Lengyel, Olga</a></li>
 				<li><a href="/l/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
-				<li><a href="/l/lettich-andre/index.html">Lettich, André</a></li>
+				<li><a href="/l/lettich-andre/index.html">Lettich, Andr&eacute;</a></li>
 				<li><a href="/l/levi-primo/index.html">Levi, Primo</a></li>
-				<li><a href="/l/levy-robert/index.html">Lévy, Robert</a></li>
+				<li><a href="/l/levy-robert/index.html">L&eacute;vy, Robert</a></li>
 				<li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li>
 				<li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li>
 				<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
 				<li><a href="/l/limousin-henri/index.html">Limousin, Henri</a></li>
 				<li><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
 				<li><a href="/m/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
-				<li><a href="/m/mansfeld-geza/index.html">Mansfeld, Géza</a></li>
+				<li><a href="/m/mansfeld-geza/index.html">Mansfeld, G&eacute;za</a></li>
 				<li><a href="/m/marcus-kurt/index.html">Marcus, Kurt</a></li>
 				<li><a href="/m/mermelstein-mel/index.html">Mermelstein, Melvin</a></li>
 				<li><a href="/m/muller-filip/index.html">M&uuml;ller, Filip</a></li>
@@ -162,7 +162,7 @@
 				<li><a href="/p/pilo-aaron/index.html">Pilo, Aaron</a></li>
 				<li><a href="/p/plucer-regina/index.html">Plucer, Regina</a></li>
 				<li><a href="/p/putzker-fritz/index.html">Putzker, Fritz</a></li>
-				<li><a href="/r/rogerie-andre/index.html">Rogerie, André</a></li>
+				<li><a href="/r/rogerie-andre/index.html">Rogerie, Andr&eacute;</a></li>
 				<li><a href="/r/rogner-adolf/index.html">R&ouml;gner, Adolf</a></li>
 				<li><a href="/r/rosenblum-joshuah/index.html">Rosenblum, Joshuah</a></li>
 				<li><a href="/r/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
@@ -221,7 +221,7 @@
 				<a id="Buchenwald"></a><a href="/b/buchenwald/index.html">Buchenwald</a>
 			</h4>
 			<ul>
-				<li><a href="/h/henocque-georges/index.html">Hénocque, Georges</a></li>
+				<li><a href="/h/henocque-georges/index.html">H&eacute;nocque, Georges</a></li>
 				<li><a href="/r/rassinier-paul/index.html">Rassinier, Paul</a></li>
 				<li><a href="/r/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
 				<li><a href="/r/rosenblat-herman/index.html">Rosenblat, Herman</a></li>
