--- a/w/wolken-otto/index.html
+++ b/w/wolken-otto/index.html
@@ -46,7 +46,7 @@
 			</p>
 			<ul>
 				<li>He claimed to have been sent to the gas chamber on arrival at Auschwitz with all the rest of his transport, but that he was saved because the <a href="/m/morgues/index.html">morgue</a> (aka gas chamber) happened to have been full of bodies.</li>
-				<li>True to the false cliché, Wolken claimed that selections were usually made by Dr. <a href="/m/mengele-josef/index.html">Mengele</a>.</li>
+				<li>True to the false clich&eacute;, Wolken claimed that selections were usually made by Dr. <a href="/m/mengele-josef/index.html">Mengele</a>.</li>
 				<li>He claimed that 700,000 Hungarian Jews were deported to Auschwitz, of whom 600,000 were gassed. However, only a little more than 400,000 Jews were deported from <a href="/h/hungary/index.html">Hungary</a>, and <a href="/a/air-photos/index.html#Auschwitz">air photos</a> show that the claimed mass-extermination of Jews deported from Hungary simply did not happen.</li>
 				<li>Around the same time of the deportation of Hungarian Jews, 350,000 Jews from various ghettos were allegedly also deported to Auschwitz, 300,000 of whom were supposedly gassed. However, even if we follow the orthodox narrative, the only major deportation to Auschwitz of Jews from ghettos in that time frame came in July and August 1944 from the <a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a> and comprised only a maximum of 70,000 Jews.</li>
 				<li>Wolken claimed that <a href="/s/sonderkommando/index.html"><i>Sonderkommandos</i></a> repeatedly refused to do their work, as a result of which the entire unit was gassed and burned. However, the orthodox narrative knows nothing of repeated mutinies, and rejects the claim that these units were repeatedly killed.</li>
@@ -65,7 +65,7 @@
 				</li>
 			</ul>
 			<p>
-				Wolken&rsquo;s testimony is a hodgepodge of hearsay, rumors and clichés, mixed with Polish and Soviet propaganda that he was more than eager to integrate and confirm with his statements. The documents he produced are very questionable historical sources, in particular when it comes to claims about allegedly gassed inmates, of whose existence, let alone fate, he could not have had any reliable knowledge.
+				Wolken&rsquo;s testimony is a hodgepodge of hearsay, rumors and clich&eacute;s, mixed with Polish and Soviet propaganda that he was more than eager to integrate and confirm with his statements. The documents he produced are very questionable historical sources, in particular when it comes to claims about allegedly gassed inmates, of whose existence, let alone fate, he could not have had any reliable knowledge.
 			</p>
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Mattogno2023b">Mattogno 2023b</a>, p. 20; <a href="/bibliography/index.html#Mattogno2022b">2022b</a>, pp. 35-40.)
