--- a/z/zyklon-b-introduction-devices/index.html
+++ b/z/zyklon-b-introduction-devices/index.html
@@ -173,7 +173,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/k/kertesz-imre/index.html">I. Kertész</a></td>
+						<td><a href="/k/kertesz-imre/index.html">I. Kert&eacute;sz</a></td>
 						<td> 2 </td>
 						<td></td>
 						<td> showers </td>
