--- a/z/zyklon-b/index.html
+++ b/z/zyklon-b/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Zyklon B | Holocaust Encyclopedia</title>
+	<title>Zyklon B (cyanide gas) | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,7 +17,7 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Zyklon B
+				Zyklon B <small>(cyanide gas)</small>
 			</h2>
 			<audio controls src="ZyklonB.mp3"></audio>
 			<h4>
@@ -37,7 +37,7 @@
 				Liquid hydrogen cyanide has a short shelf life and is extremely dangerous when handled incorrectly. Therefore, the <i>in-situ</i> development of gaseous hydrogen cyanide by pouring a strong acid (usually semi-diluted sulfuric acid) onto a highly soluble cyanide powder (such as sodium or potassium cyanide) was used instead until a few years after the First World War. However, numerous accidents resulted in research efforts to produce a safer method. This resulted in the development of <q>Zyklon</q> by German chemists, which was a mixture of a highly irritating liquid with a liquid cyanide component (methyl cyanoformate). Due to the irritant, it was considered safe, hence it was sold so liberally in the early 1920s that accidents occurred again, leading to the ban of all cyanide products for pest control in Germany in July 1922.
 			</p>
 			<p>
-				In September of 1922, the German Association for Pest Control (<i><span style="text-decoration: underline;">De</span>utsche <span style="text-decoration: underline;">Ge</span>sellschaft f&uuml;r <span style="text-decoration: underline;">Sch</span>&auml;dlingsbek&auml;mpfung,</i> <a href="/d/degesch/index.html">DEGESCH</a>) was granted the exclusive right to develop and use cyanide-based pest-control chemicals in Germany. Around the same time, DEGESCH developed a superior substitute product for Zyklon, called <q>Zyklon B,</q> which was liquid hydrogen cyanide mixed with a chemical stabilizer and a teargas (as a warning agent) absorbed on diatomaceous earth. A little later, this chemical mixture was also sold absorbed on wood-fiber disks, and in the 1930s, diatomaceous earth was replaced by gypsum pellets as the carrier material, which, unlike diatomaceous earth, did not tend to compact during storage and transport, thus keeping its liquid-absorbing properties.
+				In September of 1922, the German Association for Pest Control (<i><span style="text-decoration: underline;">Deutsche <span style="text-decoration: underline;">Gesellschaft f&uuml;r <span style="text-decoration: underline;">Sch&auml;dlingsbek&auml;mpfung,</i> <a href="/d/degesch/index.html">DEGESCH</a>) was granted the exclusive right to develop and use cyanide-based pest-control chemicals in Germany. Around the same time, DEGESCH developed a superior substitute product for Zyklon, called <q>Zyklon B,</q> which was liquid hydrogen cyanide mixed with a chemical stabilizer and a teargas (as a warning agent) absorbed on diatomaceous earth. A little later, this chemical mixture was also sold absorbed on wood-fiber disks, and in the 1930s, diatomaceous earth was replaced by gypsum pellets as the carrier material, which, unlike diatomaceous earth, did not tend to compact during storage and transport, thus keeping its liquid-absorbing properties.
 			</p>
 			<p>
 				By the advent of Word War Two, almost all Zyklon B sold in Europe consisted of the gypsum type, called <q>Erco.</q> This product was packed in tin cans measuring 15.4 cm in diameter and of various heights, depending on the can&rsquo;s cyanide contents. DEGESCH distributed cans containing 200, 500, 1,000 and 1,500 g of liquid hydrogen cyanide, with the carrier material weighing roughly twice that amount. Hence, a 1-kg-can of Zyklon B contained 1 kg of hydrogen cyanide, plus some 2 kg of gypsum pellets.
