--- a/b/index.html
+++ b/b/index.html
@@ -62,10 +62,12 @@
 						<li><a href="/b/blaha-franz/index.html">Blaha, Franz</a></li>
 						<li><a href="/b/blatt-thomas-toivi/index.html">Blatt, Thomas Toivi</a></li>
 						<li><a href="/b/blobel-paul/index.html">Blobel, Paul</a></li>
+						<li><a href="/i/iron-blue/index.html">blue wall discoloration</a></li>
 						<li><a href="/b/blyazer-a/index.html">Blyazer, A.</a></li>
 						<li><a href="/b/bock-ludwig/index.html">Bock, Ludwig</a></li>
 						<li><a href="/b/bock-richard/index.html">B&ouml;ck, Richard</a></li>
 						<li><a href="/b/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
+						<li><a href="/c/czechia/index.html">Bohemia</a></li>
 						<li><a href="/b/bomba-abraham/index.html">Bomba, Abraham</a></li>
 						<li><a href="/b/bone-mill/index.html">Bone Mill</a></li>
 						<li><a href="/b/bouard-michel-de/index.html">Bo&uuml;ard, Michel de</a></li>
