--- a/c/commissars-order/index.html
+++ b/c/commissars-order/index.html
@@ -28,7 +28,7 @@
 			</p>
 			<blockquote>
 				<p lang="fr-FR">
-					<i>Au cas où, en temps de guerre, un des belligérants ne serait pas partie à la Convention, ses dispositions demeureront néanmoins obligatoires entre les belligérants qui y participent.</i>
+					<i>Au cas où, en temps de guerre, un des bellig&eacute;rants ne serait pas partie à la Convention, ses dispositions demeureront n&eacute;anmoins obligatoires entre les bellig&eacute;rants qui y participent.</i>
 				</p>
 			</blockquote>
 			<p>
