--- a/c/index.html
+++ b/c/index.html
@@ -32,7 +32,7 @@
 						<li><a href="/c/chomka-wladyslaw/index.html">Chomka, W&#322;adys&#322;aw</a></li>
 						<li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a></li>
 						<li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li>
-						<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
+						<li><a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a></li>
 						<li><a href="/c/code-language/index.html">Code Language</a></li>
 						<li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li>
 						<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
@@ -46,7 +46,9 @@
 						<li><a href="/c/cremation-propaganda/index.html">Cremation Propaganda</a></li>
 						<li><a href="/c/crematoria/index.html">Crematoria</a></li>
 						<li><a href="/c/criminal-traces/index.html">Criminal Traces</a></li>
+						<li><a href="/y/yugoslavia/index.html">Croatia</a></li>
 						<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
+						<li><a href="/z/zyklon-b/index.html">cyanide gas</a></li>
 						<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
 						<li><a href="/c/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
 						<li><a href="/c/czech-danuta/index.html">Czech, Danuta</a></li>
