--- a/j/jager-report/index.html
+++ b/j/jager-report/index.html
@@ -44,11 +44,11 @@
 					<tr>
 						<td>
 
-							<span lang="it-IT">Aglona</span>
+							<span lang="it-IT">Aglona
 												</td>
 						<td>
 
-							<span lang="de-DE">544</span>
+							<span lang="de-DE">544
 												</td>
 						<td>
 
@@ -58,7 +58,7 @@
 					<tr>
 						<td>
 
-							<span lang="it-IT">Alytus</span>
+							<span lang="it-IT">Alytus
 												</td>
 						<td>
 
@@ -80,11 +80,11 @@
 					<tr>
 						<td>
 
-							<span lang="it-IT">Babtei (Babtai)</span>
+							<span lang="it-IT">Babtei (Babtai)
 												</td>
 						<td>
 
-							<span lang="it-IT">91</span>
+							<span lang="it-IT">91
 												</td>
 						<td></td>
 					</tr>
@@ -95,7 +95,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">740</span>
+							<span lang="de-DE">740
 												</td>
 						<td></td>
 					</tr>
@@ -124,11 +124,11 @@
 					<tr>
 						<td>
 
-							<span lang="de-DE">Dagda and Kraslawa</span>
+							<span lang="de-DE">Dagda and Kraslawa
 												</td>
 						<td>
 
-							<span lang="de-DE">216</span>
+							<span lang="de-DE">216
 												</td>
 						<td></td>
 					</tr>
@@ -139,18 +139,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">99</span>
+							<span lang="de-DE">99
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Daugavpils</span>
+							<span lang="it-IT">Daugavpils
 												</td>
 						<td>
 
-							<span lang="de-DE">9,606</span>
+							<span lang="de-DE">9,606
 												</td>
 						<td>
 
@@ -160,33 +160,33 @@
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Eysisky</span>
+							<span lang="fr-FR">Eysisky
 												</td>
 						<td>
 
-							<span lang="de-DE">3,446</span>
-												</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>
-
-							<span lang="de-DE">Georgenburg</span>
-												</td>
-						<td>
-
-							<span lang="de-DE">412</span>
+							<span lang="de-DE">3,446
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Girkalnis (Girkalinei)</span>
+							<span lang="de-DE">Georgenburg
 												</td>
 						<td>
 
-							<span lang="de-DE">6</span>
+							<span lang="de-DE">412
+												</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>
+
+							<span lang="it-IT">Girkalnis (Girkalinei)
+												</td>
+						<td>
+
+							<span lang="de-DE">6
 												</td>
 						<td></td>
 					</tr>
@@ -197,18 +197,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">854</span>
+							<span lang="de-DE">854
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Jahiunai</span>
+							<span lang="fr-FR">Jahiunai
 												</td>
 						<td>
 
-							<span lang="de-DE">575</span>
+							<span lang="de-DE">575
 												</td>
 						<td></td>
 					</tr>
@@ -219,7 +219,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">282</span>
+							<span lang="de-DE">282
 												</td>
 						<td></td>
 					</tr>
@@ -230,29 +230,29 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">144</span>
+							<span lang="de-DE">144
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Jonava</span>
+							<span lang="it-IT">Jonava
 												</td>
 						<td>
 
-							<span lang="de-DE">2,108</span>
+							<span lang="de-DE">2,108
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="de-DE">Joniskis</span>
+							<span lang="de-DE">Joniskis
 												</td>
 						<td>
 
-							<span lang="de-DE">355</span>
+							<span lang="de-DE">355
 												</td>
 						<td></td>
 					</tr>
@@ -263,18 +263,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">1,911</span>
+							<span lang="de-DE">1,911
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Kaunas, total, of which</span>
+							<span lang="it-IT">Kaunas, total, of which
 												</td>
 						<td>
 
-							<span lang="de-DE">23,205</span>
+							<span lang="de-DE">23,205
 												</td>
 						<td>
 
@@ -284,22 +284,22 @@
 					<tr>
 						<td>
 
-							<span lang="it-IT">Fort IV</span>
+							<span lang="it-IT">Fort IV
 												</td>
 						<td>
 
-							<span lang="de-DE">3,420</span>
+							<span lang="de-DE">3,420
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Fort VII</span>
+							<span lang="fr-FR">Fort VII
 												</td>
 						<td>
 
-							<span lang="de-DE">3,238</span>
+							<span lang="de-DE">3,238
 												</td>
 						<td></td>
 					</tr>
@@ -310,18 +310,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">16,013</span>
+							<span lang="de-DE">16,013
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Kedainiai</span>
+							<span lang="it-IT">Kedainiai
 												</td>
 						<td>
 
-							<span lang="de-DE">2,201</span>
+							<span lang="de-DE">2,201
 												</td>
 						<td>
 
@@ -331,11 +331,11 @@
 					<tr>
 						<td>
 
-							<span lang="it-IT">Krakes</span>
+							<span lang="it-IT">Krakes
 												</td>
 						<td>
 
-							<span lang="de-DE">1,125</span>
+							<span lang="de-DE">1,125
 												</td>
 						<td></td>
 					</tr>
@@ -346,7 +346,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">1,535</span>
+							<span lang="de-DE">1,535
 												</td>
 						<td></td>
 					</tr>
@@ -357,18 +357,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">155</span>
+							<span lang="de-DE">155
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Mariampole</span>
+							<span lang="it-IT">Mariampole
 												</td>
 						<td>
 
-							<span lang="de-DE">5,328</span>
+							<span lang="de-DE">5,328
 												</td>
 						<td>
 
@@ -378,22 +378,22 @@
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Nemencing</span>
+							<span lang="fr-FR">Nemencing
 												</td>
 						<td>
 
-							<span lang="de-DE">403</span>
+							<span lang="de-DE">403
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Novo-Vileyka</span>
+							<span lang="fr-FR">Novo-Vileyka
 												</td>
 						<td>
 
-							<span lang="de-DE">1,159</span>
+							<span lang="de-DE">1,159
 												</td>
 						<td></td>
 					</tr>
@@ -404,18 +404,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">1,160</span>
+							<span lang="de-DE">1,160
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Panevezys</span>
+							<span lang="it-IT">Panevezys
 												</td>
 						<td>
 
-							<span lang="de-DE">8,837</span>
+							<span lang="de-DE">8,837
 												</td>
 						<td>
 
@@ -429,7 +429,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">1,349</span>
+							<span lang="de-DE">1,349
 												</td>
 						<td></td>
 					</tr>
@@ -440,18 +440,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">125</span>
+							<span lang="de-DE">125
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="de-DE">Pleschnitza, Bicholin, Scak, Bober, Uzda</span>
+							<span lang="de-DE">Pleschnitza, Bicholin, Scak, Bober, Uzda
 												</td>
 						<td>
 
-							<span lang="de-DE">3,050</span>
+							<span lang="de-DE">3,050
 												</td>
 						<td></td>
 					</tr>
@@ -462,7 +462,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">4,000</span>
+							<span lang="de-DE">4,000
 												</td>
 						<td></td>
 					</tr>
@@ -473,29 +473,29 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">253</span>
+							<span lang="de-DE">253
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="de-DE">Prienai</span>
+							<span lang="de-DE">Prienai
 												</td>
 						<td>
 
-							<span lang="de-DE">1,078</span>
+							<span lang="de-DE">1,078
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Rasainiai District</span>
+							<span lang="it-IT">Rasainiai District
 												</td>
 						<td>
 
-							<span lang="de-DE">3,603</span>
+							<span lang="de-DE">3,603
 												</td>
 						<td>
 
@@ -505,22 +505,22 @@
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Rieza</span>
+							<span lang="fr-FR">Rieza
 												</td>
 						<td>
 
-							<span lang="de-DE">1,767</span>
+							<span lang="de-DE">1,767
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Rokiskis</span>
+							<span lang="it-IT">Rokiskis
 												</td>
 						<td>
 
-							<span lang="de-DE">99</span>
+							<span lang="de-DE">99
 												</td>
 						<td></td>
 					</tr>
@@ -531,7 +531,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">784</span>
+							<span lang="de-DE">784
 												</td>
 						<td></td>
 					</tr>
@@ -542,7 +542,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">664</span>
+							<span lang="de-DE">664
 												</td>
 						<td></td>
 					</tr>
@@ -553,18 +553,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">953</span>
+							<span lang="de-DE">953
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Semeliskes</span>
+							<span lang="fr-FR">Semeliskes
 												</td>
 						<td>
 
-							<span lang="de-DE">962</span>
+							<span lang="de-DE">962
 												</td>
 						<td></td>
 					</tr>
@@ -575,7 +575,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">193</span>
+							<span lang="de-DE">193
 												</td>
 						<td></td>
 					</tr>
@@ -586,40 +586,40 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">414</span>
+							<span lang="de-DE">414
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Svenciany</span>
+							<span lang="fr-FR">Svenciany
 												</td>
 						<td>
 
-							<span lang="de-DE">3,726</span>
-												</td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>
-
-							<span lang="fr-FR">Trakai</span>
-												</td>
-						<td>
-
-							<span lang="de-DE">1,446</span>
+							<span lang="de-DE">3,726
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Ukmerge</span>
+							<span lang="fr-FR">Trakai
 												</td>
 						<td>
 
-							<span lang="de-DE">6,356</span>
+							<span lang="de-DE">1,446
+												</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>
+
+							<span lang="it-IT">Ukmerge
+												</td>
+						<td>
+
+							<span lang="de-DE">6,356
 												</td>
 						<td>
 
@@ -633,7 +633,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">4,609</span>
+							<span lang="de-DE">4,609
 												</td>
 						<td>
 
@@ -647,18 +647,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">43</span>
+							<span lang="de-DE">43
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="it-IT">Vandziogala</span>
+							<span lang="it-IT">Vandziogala
 												</td>
 						<td>
 
-							<span lang="de-DE">305</span>
+							<span lang="de-DE">305
 												</td>
 						<td>
 
@@ -672,7 +672,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">831</span>
+							<span lang="de-DE">831
 												</td>
 						<td></td>
 					</tr>
@@ -683,18 +683,18 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">159</span>
+							<span lang="de-DE">159
 												</td>
 						<td></td>
 					</tr>
 					<tr>
 						<td>
 
-							<span lang="fr-FR">Vilnius</span>
+							<span lang="fr-FR">Vilnius
 												</td>
 						<td>
 
-							<span lang="de-DE">21,169</span>
+							<span lang="de-DE">21,169
 												</td>
 						<td>
 
@@ -708,7 +708,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">402</span>
+							<span lang="de-DE">402
 												</td>
 						<td></td>
 					</tr>
@@ -719,7 +719,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">115</span>
+							<span lang="de-DE">115
 												</td>
 						<td></td>
 					</tr>
@@ -730,7 +730,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">2,236</span>
+							<span lang="de-DE">2,236
 												</td>
 						<td>
 
@@ -744,7 +744,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">178</span>
+							<span lang="de-DE">178
 												</td>
 						<td></td>
 					</tr>
@@ -755,7 +755,7 @@
 												</td>
 						<td>
 
-							<span lang="de-DE">2,569</span>
+							<span lang="de-DE">2,569
 												</td>
 						<td></td>
 					</tr>
