--- a/l/lewinska-pelagia/index.html
+++ b/l/lewinska-pelagia/index.html
@@ -31,7 +31,7 @@
 				<li>Inside the <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a>, toxic gas came out of the <a href="/s/showers/index.html">showers</a>, although this was technically impossible when using <a href="/z/zyklon-b/index.html">Zyklon B</a>.</li>
 			</ul>
 			<p>
-				It is evident that this witness&rsquo;s narrative is based exclusively on false rumors and clichés, not on her own recollection. (For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 388f.)
+				It is evident that this witness&rsquo;s narrative is based exclusively on false rumors and clich&eacute;s, not on her own recollection. (For details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 388f.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
