--- a/o/olere-david/index.html
+++ b/o/olere-david/index.html
@@ -30,7 +30,7 @@
 				David Olère was deported to <a href="/a/auschwitz/index.html">Auschwitz</a> in March 1943 and was employed there by the SS to paint portraits for them. He claimed that he lived in the attic of <a href="/c/crematoria/index.html#Auschwitz_Birkenau">Crematorium</a> III. Although he prepared some rather accurate architectural drawings of this building, they also include invisible features, such as the smoke ducts. He could have known their shape and position only from blueprints, which were probably provided to him by the Soviets after the war.
 			</p>
 			<p>
-				Olére is most famous for a series of paintings allegedly depicting various scenes of the claimed extermination process at Auschwitz Birkenau. However, some of them clearly depict purely imaginary scenes, such as an SS ogre eating a dead girl, or oversized crematorium chimneys spewing flames and enormous amounts of smoke into the sky. <a href="/f/flames-out-of-crematory-chimneys/index.html">Flames</a> could not have come out of these crematorium chimneys, and <a href="/a/air-photos/index.html#Auschwitz">air photos</a> show that they emitted very little smoke, if any.
+				Ol&eacute;re is most famous for a series of paintings allegedly depicting various scenes of the claimed extermination process at Auschwitz Birkenau. However, some of them clearly depict purely imaginary scenes, such as an SS ogre eating a dead girl, or oversized crematorium chimneys spewing flames and enormous amounts of smoke into the sky. <a href="/f/flames-out-of-crematory-chimneys/index.html">Flames</a> could not have come out of these crematorium chimneys, and <a href="/a/air-photos/index.html#Auschwitz">air photos</a> show that they emitted very little smoke, if any.
 			</p>
 			<p>
 				Some of his paintings do not even pretend to depict reality by the theme chosen, but an artist&rsquo;s interpretation of it, enriched with symbols, using lots of <q>poetic license</q> &mdash; which is to say: exaggerations and inventions.
@@ -45,10 +45,10 @@
 				In one drawing, he depicted how the members of the so-called <i>Sonderkommando</i> dragged corpses from the gas chamber with its heavy, bank-safe-like door straight to the cremation furnaces. However, the rooms claimed to have served as a <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a> did not border on the furnace room in any of the <a href="/b/birkenau/index.html">Birkenau</a> crematoria. Furthermore, all rooms claimed to have served as homicidal gas chambers only had primitive doors made of wooden boards. (See the entry on <a href="/g/gastight-doors/index.html">gastight doors</a>.)
 			</p>
 			<p>
-				In another drawing, he shows the furnaces in Crematoria II and III in Birkenau close-up. He has doubled the size of the muffle doors in order to accommodate the many witness statements of multiple corpses pushed into the muffle at once. He has one bare-chested worker push a stretcher with several bodies on it into the muffle, which has flames coming out of it. That may be witness fantasy, but flames do not come out of a cremation muffle; working with a naked upper body in front of a glowing hot furnace is very bad advice; and the stretcher would have tipped down into the muffle, as its load was far heavier than the inmate holding the stretcher. In other words, this entire scenario is simply impossible &mdash; as were the claims of many a witness who Olére tried to give an artist&rsquo;s voice here.
+				In another drawing, he shows the furnaces in Crematoria II and III in Birkenau close-up. He has doubled the size of the muffle doors in order to accommodate the many witness statements of multiple corpses pushed into the muffle at once. He has one bare-chested worker push a stretcher with several bodies on it into the muffle, which has flames coming out of it. That may be witness fantasy, but flames do not come out of a cremation muffle; working with a naked upper body in front of a glowing hot furnace is very bad advice; and the stretcher would have tipped down into the muffle, as its load was far heavier than the inmate holding the stretcher. In other words, this entire scenario is simply impossible &mdash; as were the claims of many a witness who Ol&eacute;re tried to give an artist&rsquo;s voice here.
 			</p>
 			<p>
-				One might think that Olére simply believed those witnesses whose tales he captured on canvas. But consider the tale he himself told mainstream historian Jean-Claude Pressac (1989, p. 554):
+				One might think that Ol&eacute;re simply believed those witnesses whose tales he captured on canvas. But consider the tale he himself told mainstream historian Jean-Claude Pressac (1989, p. 554):
 			</p>
 			<blockquote>
 				<p>
@@ -56,7 +56,7 @@
 				</p>
 			</blockquote>
 			<p>
-				By all accounts, Olére was simply another megalomaniac liar.
+				By all accounts, Ol&eacute;re was simply another megalomaniac liar.
 			</p>
 			<p>
 				(For more details, see <a href="/bibliography/index.html#Rudolf2023">Rudolf 2023</a>, pp. 462-465; see also <a href="/bibliography/index.html#Mattogno2016f">Mattogno 2016f</a>, pp. 90-94.)
