--- a/r/rassinier-paul/index.html
+++ b/r/rassinier-paul/index.html
@@ -27,10 +27,10 @@
 				</figcaption>
 			</figure>
 			<p>
-				Paul Rassinier (18 March 1906 &mdash; 28 July 1967) was a French high-school teacher. Born in Bermont, France, Rassinier joined the French Communist Party in 1922, at the age of only 16. In the course of time, however, Rassinier turned to pacifism and opposed the nationalization of private property advocated by the Communists, which is why he was expelled from the party in 1932. He joined the Federation of the Socialist Party two years later. In this party, too, he advocated his pacifism, which tended, among other things, to seek an understanding with Germany rather than a warlike conflict. From 1933 to 1943, Rassinier taught history at the Collège d&rsquo;enseignement général in Belfort.
+				Paul Rassinier (18 March 1906 &mdash; 28 July 1967) was a French high-school teacher. Born in Bermont, France, Rassinier joined the French Communist Party in 1922, at the age of only 16. In the course of time, however, Rassinier turned to pacifism and opposed the nationalization of private property advocated by the Communists, which is why he was expelled from the party in 1932. He joined the Federation of the Socialist Party two years later. In this party, too, he advocated his pacifism, which tended, among other things, to seek an understanding with Germany rather than a warlike conflict. From 1933 to 1943, Rassinier taught history at the Collège d&rsquo;enseignement g&eacute;n&eacute;ral in Belfort.
 			</p>
 			<p>
-				Immediately after the occupation of France by German troops, he helped establish the non-Communist resistance group <i>Libération-Nord,</i> where he tried to implement his policy of renouncing violence. In this context, he published an underground newspaper titled <i>La Quatrième Republique</i> (<i>The Fourth Republic</i>).
+				Immediately after the occupation of France by German troops, he helped establish the non-Communist resistance group <i>Lib&eacute;ration-Nord,</i> where he tried to implement his policy of renouncing violence. In this context, he published an underground newspaper titled <i>La Quatrième Republique</i> (<i>The Fourth Republic</i>).
 			</p>
 			<p>
 				In 1940, due to anti-Jewish measures by the occupying regime, Rassinier began to provide false papers to Jews who wanted to flee France so that they could travel to Switzerland without problems. As a result of this activity, he was arrested by the Gestapo on 30 November 1943, and deported to the <a href="/b/buchenwald/index.html">Buchenwald</a> Camp. From April 1944 until his liberation by U.S. troops in April 1945, he had to build German <q>retaliatory weapons</q> (<i>V-Waffen</i>) in the Dora subcamp under terrible conditions.
@@ -39,7 +39,7 @@
 				After the war, Rassinier, who was severely disabled due to his time in German concentration camps, joined the French Socialist Party and became involved in the leadership of the Belfort party district. As an replacement of a deceased member of parliament, he occupied a seat in the French parliament in the fall of 1946, but lost it in the elections held shortly thereafter. Because of his resistance activities during the war, he received the French Gold Medal of Recognition and the highest award of the resistance movement, the High Red Rosette.
 			</p>
 			<p>
-				Because of his principle of nonviolence, he opposed the violent <q>purges</q> of former collaborators (<q><i>épurations</i></q>) carried out in post-war France, which made him unpopular among many opinion leaders in France, especially the spiteful Communists.
+				Because of his principle of nonviolence, he opposed the violent <q>purges</q> of former collaborators (<q><i>&eacute;purations</i></q>) carried out in post-war France, which made him unpopular among many opinion leaders in France, especially the spiteful Communists.
 			</p>
 			<p>
 				The contrast between what he himself had experienced in the Buchenwald and Dora Camps, and what some other survivors published about these camps, made him a critic of survivor literature. On the one hand, he criticized that this literature concealed the fact that prisoners who collaborated with the SS ran the internal operations of the concentration camps, and that many of these prisoner functionaries, and not the SS, had been responsible for certain abuses and atrocities in the camps. On the other hand, Rassinier denounced as false claims that mass exterminations by means of gas chambers had taken place at Buchenwald Camp, since, in his experience, there was no <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chamber</a> at the <a href="/b/buchenwald/index.html">Buchenwald</a> Camp &mdash; a fact confirmed today by all historians.
@@ -57,9 +57,9 @@
 				<li><i>Passage de la ligne,</i> La Librairie française, Paris, 1948.</li>
 				<li><i>Le mensonge d&rsquo;Ulysse,</i> La Librairie française, Paris, 1950.</li>
 				<li><i>Ulysse trahi par les siens,</i> La Librairie Française, Paris, 1961.</li>
-				<li><i>Le véritable procés Eichmann ou les vainquers incorrigibles,</i> Les Sept Couleurs, Paris, 1962.</li>
-				<li><i>Le drame des juifs européens,</i> Paris, 1964.</li>
-				<li><i>L&rsquo;opération vicaire,</i> La Table Ronde, Paris, 1965.</li>
+				<li><i>Le v&eacute;ritable proc&eacute;s Eichmann ou les vainquers incorrigibles,</i> Les Sept Couleurs, Paris, 1962.</li>
+				<li><i>Le drame des juifs europ&eacute;ens,</i> Paris, 1964.</li>
+				<li><i>L&rsquo;op&eacute;ration vicaire,</i> La Table Ronde, Paris, 1965.</li>
 				<li><i>The Real Eichmann Trial or The Incorrigible Victors,</i> Institute for Historical Review, Torrance, 1976.</li>
 				<li><i>Debunking the Genocide Myth,</i> The Noontide Press, Torrance, CA, 1978.</li>
 				<li><i>The Holocaust Story and the Lies of Ulysses,</i> 2nd ed., Institute for Historical Review, New Port Beach, 1990.</li>
