--- a/t/towels-soap-toothbrushes-inside-gas-chambers/index.html
+++ b/t/towels-soap-toothbrushes-inside-gas-chambers/index.html
@@ -33,7 +33,7 @@
 				It is even worse with the claimed pieces of soap, which would all have ended up on the floor, trampled upon by two thousand panicking feet, mixed up with the already-mentioned body fluids. Little if any of it could have been recovered. It would have been a waste of soap on a large scale. In other words: it certainly never happened.
 			</p>
 			<p>
-				Here is a list of witnesses who claimed otherwise, demonstrating how cross-fertilization of many witnesses&rsquo; minds with rumors and clichés leads to a <q><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></q> on a lie:
+				Here is a list of witnesses who claimed otherwise, demonstrating how cross-fertilization of many witnesses&rsquo; minds with rumors and clich&eacute;s leads to a <q><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></q> on a lie:
 			</p>
 			<ul>
 				<li><a href="/b/bimko-ada/index.html">Ada Bimko</a></li>
@@ -42,10 +42,10 @@
 				<li><a href="/g/gertner-szaja/index.html">Szaja Gertner</a></li>
 				<li><a href="/i/israel-bruno/index.html">Bruno Israel</a></li>
 				<li><a href="/k/kaufmann-schafranov-sofia/index.html">Sofia Kaufmann Schafranov</a></li>
-				<li><a href="/k/kertesz-imre/index.html">Imre Kertész</a> (soap only)</li>
+				<li><a href="/k/kertesz-imre/index.html">Imre Kert&eacute;sz</a> (soap only)</li>
 				<li><a href="/k/kranz-hermine/index.html">Hermine Kranz</a></li>
 				<li><a href="/l/lengyel-olga/index.html">Olga Lengyel</a></li>
-				<li><a href="/l/lettich-andre/index.html">André Lettich</a></li>
+				<li><a href="/l/lettich-andre/index.html">Andr&eacute; Lettich</a></li>
 				<li><a href="/l/lichtenstein-mordecai/index.html">Mordecai Lichtenstein</a></li>
 				<li><a href="/l/litwinska-sofia/index.html">Sofia Litwinska</a> (with mirrors on the wall)</li>
 				<li><a href="/m/mandelbaum-henryk/index.html">Henryk Mandelbaum</a> (he even has toothbrushes handed out to the victims)</li>
