--- a/v/veil-simone/index.html
+++ b/v/veil-simone/index.html
@@ -30,7 +30,7 @@
 				Simone Jacob, whose last name changed to Veil after marrying, was a young Jewish woman from France who was deported to <a href="/a/auschwitz/index.html">Auschwitz</a> in April 1944. When Polish historian Danuta Czech wrote the first edition of her <i>Auschwitz Chronicle,</i> she reported that not a single woman of the transport with which Ms. Jacob arrived at Auschwitz had been registered there. Hence, Mrs. Czech jumped to the unproven conclusion that all these women had been gassed. Hence, Ms. Jacob had been gassed on arrival as well.
 			</p>
 			<p>
-				In 1979, Simone Veil, née Jacob, became the first president of the newly created European Parliament.
+				In 1979, Simone Veil, n&eacute;e Jacob, became the first president of the newly created European Parliament.
 			</p>
 			<p>
 				In the second edition of her <i>Auschwitz Chronicle</i> of <a href="/bibliography/index.html#Czech">1989/1990</a>, Danuta Czech corrected this and other similar errors. She had now found 223 women from that transport who had been registered after all. Unable to learn from past mistakes, she declared that those about whose fate she had no information were <q>killed in the gas chambers</q> &mdash; with not a shred of evidence to back this up.
